added swagger for building_handler
